--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -2,7 +2,7 @@
 ip-mode = ipv4-only
 mitm-on-wifi-access = false
 sni-sniffing = true
-disable-stun = false
+disable-stun = true
 dns-reject-mode = LoopbackIP
 domain-reject-mode = DNS
 udp-fallback-mode = REJECT
@@ -37,7 +37,7 @@ resource-parser = https://kelee.one/Resource/Script/Sub-Store/sub-store-parser_f
 #ssid-trigger = "default":rule, "cellular":rule,"xjj_5G":direct
 
 # >手动添加的节点
-[Proxy]
+[Proxy] 
 
 # >机场订阅
 [Remote Proxy]
@@ -45,40 +45,40 @@ Ladder = https://baidu.com,udp=false,fast-open=false,vmess-aead=true,skip-cert-v
 
 # >策略组
 [Proxy Group]
-自动选择 = url-test,全球节点,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Auto.png
-节点选择 = select,自动选择,香港时延优选,新国时延优选,其他节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
-Telegram = select,节点选择,新国时延优选,美国时延优选,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Telegram.png
-OpenAi = select,节点选择,新国时延优选,其他节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/OpenAI.png
-Apple = select,DIRECT,节点选择,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
-PayPal = select,节点选择,美国时延优选,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Paypal.png
-TikTok = select,节点选择,新国时延优选,台湾时延优选,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
-漏网之鱼 = select,节点选择,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
+自动选择 = url-test,全球节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Auto.png
+节点选择 = select,自动选择,香港时延优选,新国时延优选,自建节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
+Telegram = select,节点选择,新国时延优选,美国时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Telegram.png
+OpenAi = select,节点选择,新国时延优选,自建节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/OpenAI.png
+Apple = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
+PayPal = select,节点选择,美国时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Paypal.png
+TikTok = select,节点选择,新国时延优选,台湾时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
+漏网之鱼 = select,节点选择,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 # --------------------------------
 # 自动
 # 时延优选
-香港时延优选 = url-test,香港节点,url = http://cp.cloudflare.com/generate_204,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾时延优选 = url-test,台湾节点,url = http://cp.cloudflare.com/generate_204,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本时延优选 = url-test,日本节点,url = http://cp.cloudflare.com/generate_204,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国时延优选 = url-test,韩国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-新国时延优选 = url-test,新国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-美国时延优选 = url-test,美国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+香港时延优选 = url-test,香港节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾时延优选 = url-test,台湾节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+日本时延优选 = url-test,日本节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+韩国时延优选 = url-test,韩国节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+新国时延优选 = url-test,新国节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+美国时延优选 = url-test,美国节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 # --------------------------------
 # 故障转移
-香港故障转移 = fallback,香港节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾故障转移 = fallback,台湾节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本故障转移 = fallback,日本节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国故障转移 = fallback,韩国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-新国故障转移 = fallback,新国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-美国故障转移 = fallback,美国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+香港故障转移 = fallback,香港节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾故障转移 = fallback,台湾节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+日本故障转移 = fallback,日本节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+韩国故障转移 = fallback,韩国节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+新国故障转移 = fallback,新国节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+美国故障转移 = fallback,美国节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 # --------------------------------
 # 负载均衡
-香港负载均衡 = load-balance,香港节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾负载均衡 = load-balance,台湾节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本负载均衡 = load-balance,日本节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国负载均衡 = load-balance,韩国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-新国负载均衡 = load-balance,新国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-美国负载均衡 = load-balance,美国节点,url = http://cp.cloudflare.com/generate_204,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+香港负载均衡 = load-balance,香港节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾负载均衡 = load-balance,台湾节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+日本负载均衡 = load-balance,日本节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+韩国负载均衡 = load-balance,韩国节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+新国负载均衡 = load-balance,新国节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+美国负载均衡 = load-balance,美国节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 # --------------------------------
 
 # >筛选订阅节点
@@ -91,17 +91,12 @@ TikTok = select,节点选择,新国时延优选,台湾时延优选,url = http://
 新国节点 = NameRegex, FilterKey = "^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
 美国节点 = NameRegex, FilterKey = "^(?=.*(美国|US|United States|America|🇺🇸))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
 其他节点 = NameRegex, FilterKey = "^(?!.*(🇭🇰|HK|Hong|香港|🇹🇼|🇨🇳|TW|Taiwan|台湾|🇯🇵|JP|Japan|日本|🇸🇬|SG|Singapore|狮城|新加坡|🇺🇸|US|United States|America|美国|🇰🇷|KR|Korea|韩国|韓|网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
+自建节点 = NameRegex, FilterKey = "^(?=.*(熊啾啾)).*$"
+
+[Proxy Chain]
 
 # >本地分流规则
 [Rule]
-# > local
-IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
-IP-CIDR,172.16.0.0/12,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
-IP-CIDR,224.0.0.0/24,DIRECT
-IP-CIDR,182.254.116.0/24,DIRECT
-GEOIP,cn,DIRECT
 FINAL,漏网之鱼
 
 # >分流规则 远程订阅
@@ -115,20 +110,19 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=节点选择, tag=GlobalMedia, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list, policy=节点选择, tag=Proxy, enabled=true
 
-https://kelee.one/Tool/Loon/Rule/AppleID.list, policy=DIRECT, tag=AppleID, enabled=true
-https://kelee.one/Tool/Loon/Rule/ApplePushNotificationService.list, policy=DIRECT, tag=ApplePushNotificationService, enabled=true
+https://kelee.one/Tool/Loon/Rule/AppleID.list, policy=Apple, tag=AppleID, enabled=true
+https://kelee.one/Tool/Loon/Rule/ApplePushNotificationService.list, policy=Apple, tag=ApplePushNotificationService, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=WeChat, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/UnionPay/UnionPay.list, policy=DIRECT, tag=UnionPay, enabled=true
 
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Lan/Lan.list, policy=DIRECT, tag=Lan, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Direct/Direct.list, policy=DIRECT, tag=Direct, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=ChinaMax, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=ChinaIPs, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaASN/ChinaASN.list, policy=DIRECT, tag=ChinaASN, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaIPsBGP/ChinaIPsBGP.list, policy=DIRECT, tag=ChinaIPsBGP, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMaxNoMedia/ChinaMaxNoMedia.list, policy=DIRECT, tag=ChinaMaxNoMedia, enabled=true
+https://raw.githubusercontent.com/yishangfei/run/refs/heads/main/Loon/CN_REGION, policy=DIRECT, tag=CN_REGION, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Hijacking/Hijacking.list, policy=REJECT, tag=Hijacking, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy.list, policy=REJECT, tag=Privacy, enabled=true
 
@@ -148,14 +142,11 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 
 # >插件(类似Surge的模块)
 [Plugin]
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/DNS.plugin, tag=🌐DNS, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/General.plugin, tag=🌐General Settings Enhanced, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Block_HTTPDNS.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/BlockAdvertisers.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Remove_ads_by_keli.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Prevent_DNS_Leaks.plugin, policy=漏网之鱼, enabled=true
-https://github.com/NSRingo/GeoServices/releases/latest/download/Location.plugin, enabled=true
-https://github.com/NSRingo/WeatherKit/releases/latest/download/WeatherKit.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/AppleWeatherEnhancer.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/LoonGallery.plugin, policy=节点选择, tag=插件仓库, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, policy=节点选择, tag=BoxJS, enabled=true
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, policy=自动选择, tag=Sub-Store, enabled=true
