--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -33,25 +33,25 @@ server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
 
 [server_remote]
- https://baidu.com, tag=Ladder, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Vpn.png, update-interval=172800, opt-parser=false, enabled=true
+https://baidu.com, tag=Ladder, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Vpn.png, update-interval=172800, opt-parser=false, enabled=true
 
 [policy]
 #默认设置15分钟测速一次，可自行修改check-interval=后面的数值（单位：秒），tolerance=后面的数值不建议修改
 url-latency-benchmark=自动选择, server-tag-regex=^(?=.*(.))(?!.*((?i)群|邀请|返利|循环|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|过期|已用|联系|邮箱|工单|贩卖|通知|倒卖|防止|国内|地址|频道|无法|说明|使用|提示|特别|访问|支持|教程|关注|更新|作者|加入|(\b(USE|USED|TOTAL|EXPIRE|EMAIL|Panel|Channel|Author)\b|(\d{4}-\d{2}-\d{2}|\d+G)))).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Auto.png
-url-latency-benchmark=香港节点, server-tag-regex=^(?=.*(香港|HK|Hong|🇭🇰))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-url-latency-benchmark=台湾节点, server-tag-regex=^(?=.*(台湾|TW|Taiwan|🇹🇼|🇨🇳))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-url-latency-benchmark=日本节点, server-tag-regex=^(?=.*(日本|JP|Japan|🇯🇵))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-url-latency-benchmark=韩国节点, server-tag-regex=^(?=.*(韩国|韓|KR|Korea|🇰🇷))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-url-latency-benchmark=新国节点, server-tag-regex=^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-url-latency-benchmark=美国节点, server-tag-regex=^(?=.*(美国|US|United States|America|🇺🇸))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-url-latency-benchmark=其他节点, server-tag-regex=^(?!.*(🇭🇰|HK|Hong|香港|🇹🇼|🇨🇳|TW|Taiwan|台湾|🇯🇵|JP|Japan|日本|🇸🇬|SG|Singapore|狮城|新加坡|🇺🇸|US|United States|America|美国|🇰🇷|KR|Korea|韩国|韓|网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark=香港节点, server-tag-regex=香港|HK|Hong|🇭🇰.*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark=台湾节点, server-tag-regex=台湾|TW|Taiwan|🇹🇼|🇨🇳, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+url-latency-benchmark=日本节点, server-tag-regex=日本|JP|Japan|🇯🇵, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+url-latency-benchmark=韩国节点, server-tag-regex=韩国|韓|KR|Korea|🇰🇷, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+url-latency-benchmark=新国节点, server-tag-regex=新加坡|狮城|SG|Singapore|🇸🇬, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+url-latency-benchmark=美国节点, server-tag-regex=美国|US|United States|America|🇺🇸, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark=其他节点, server-tag-regex=^(?!.*(🇭🇰|HK|Hong|香港|🇹🇼|🇨🇳|TW|Taiwan|台湾|🇯🇵|JP|Japan|日本|🇸🇬|SG|Singapore|狮城|新加坡|🇺🇸|US|United States|America|美国|🇰🇷|KR|Korea|韩国|韓|网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$, check-interval=900, tolerance=0, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/XD.png
 
-static=节点选择, 自动选择, 香港节点, 新国节点, 其他节点,img-urlhttps://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
+static=节点选择, 自动选择, 香港节点, 新国节点, server-tag-regex=熊啾啾,img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 static=Telegram, 节点选择, 新国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Telegram.png
-static=OpenAi, 节点选择, 新国节点, 其他节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/OpenAI.png
-static=Apple, direct, 节点选择, img-url=https://raw.githubusercontent.com/mini/master/Color/Apple.png
+static=OpenAi, 节点选择, 新国节点, server-tag-regex=熊啾啾, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/OpenAI.png
+static=Apple, direct, 节点选择, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
 static=PayPal, 节点选择, 美国节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Paypal.png
-static=TikTok, 节点选择, 美国节点, 其他节点, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
+static=TikTok, 节点选择, 美国节点, server-tag-regex=熊啾啾, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
 static=漏网之鱼, 节点选择, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 [filter_remote]
