--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -63,6 +63,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Global/Global.list, force-policy=节点选择, tag=Global, update-interval=604800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/GlobalMedia/GlobalMedia.list, force-policy=节点选择, update-interval=604800, opt-parser=false, tag=GlobalMedia, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Proxy/Proxy.list, force-policy=节点选择, tag=Proxy, update-interval=604800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Developer/Developer.list, force-policy=节点选择, tag=Developer, update-interval=604800, opt-parser=false, enabled=true
 
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Apple/Apple.list, force-policy=Apple, tag=Apple, update-interval=604800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/AppleID/AppleID.list, force-policy=Apple, tag=AppleID, update-interval=604800, opt-parser=false, enabled=true
