--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -109,6 +109,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global.list, policy=节点选择, tag=Global, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=节点选择, tag=GlobalMedia, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list, policy=节点选择, tag=Proxy, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Wikipedia/Wikipedia.list, policy=节点选择, tag=Wikipedia, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GitHub/GitHub.list, policy=节点选择, tag=GitHub, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Developer/Developer.list, policy=节点选择, tag=Developer, enabled=true
 
 https://kelee.one/Tool/Loon/Rule/AppleID.list, policy=Apple, tag=AppleID, enabled=true
 https://kelee.one/Tool/Loon/Rule/ApplePushNotificationService.list, policy=Apple, tag=ApplePushNotificationService, enabled=true
