--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -55,6 +55,7 @@ static=TikTok, 节点选择, 美国节点, server-tag-regex=熊啾啾, img-url=h
 static=漏网之鱼, 节点选择, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 [filter_remote]
+https://raw.githubusercontent.com/yishangfei/run/main/QuantumultX/Personal.list, tag=Personal, update-interval=604800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/OpenAI/OpenAI.list, force-policy=OpenAi, tag=OpenAI, update-interval=604800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, force-policy=Telegram, tag=Telegram, update-interval=604800, opt-parser=false, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/QuantumultX/PayPal/PayPal.list, force-policy=PayPal, tag=PayPal, update-interval=604800, opt-parser=false, enabled=true
