--- a/Clash.yaml
+++ b/Clash.yaml
@@ -199,6 +199,11 @@ rule-providers:
     path: './rules/Twitter.yaml'
     url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml'
 
+  YouTube:
+    <<: *RuleProviders
+    path: './rules/YouTube.yaml'
+    url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml'
+
   GitHub:
     <<: *RuleProviders
     path: './rules/GitHub.yaml'
