--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -43,18 +43,21 @@ resource-parser = https://kelee.one/Resource/Script/Sub-Store/sub-store-parser_f
 [Remote Proxy]
 Ladder = https://baidu.com,udp=false,fast-open=false,vmess-aead=true,skip-cert-verify=default,enabled=true,flexible-sni=true,img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Vpn.png
 
+
 # >策略组
 [Proxy Group]
-自动选择 = url-test,全球节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Auto.png
-节点选择 = select,自动选择,香港时延优选,新国时延优选,自建节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
+自动选择 = url-test,全球节点,interval = 600,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Auto.png
+节点选择 = select,自动选择,香港时延优选,香港故障转移,新国时延优选,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
 Telegram = select,节点选择,新国时延优选,美国时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Telegram.png
-OpenAi = select,节点选择,新国时延优选,自建节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/OpenAI.png
+OpenAi = select,节点选择,新国时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/OpenAI.png
 Apple = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
 PayPal = select,节点选择,美国时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Paypal.png
 TikTok = select,节点选择,新国时延优选,台湾时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TikTok.png
 漏网之鱼 = select,节点选择,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 # --------------------------------
+# 回家
+Home = url-test,回家节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/China.png
 # 自动
 # 时延优选
 香港时延优选 = url-test,香港节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
@@ -91,17 +94,18 @@ TikTok = select,节点选择,新国时延优选,台湾时延优选,img-url = htt
 新国节点 = NameRegex, FilterKey = "^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
 美国节点 = NameRegex, FilterKey = "^(?=.*(美国|US|United States|America|🇺🇸))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
 其他节点 = NameRegex, FilterKey = "^(?!.*(🇭🇰|HK|Hong|香港|🇹🇼|🇨🇳|TW|Taiwan|台湾|🇯🇵|JP|Japan|日本|🇸🇬|SG|Singapore|狮城|新加坡|🇺🇸|US|United States|America|美国|🇰🇷|KR|Korea|韩国|韓|网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
-自建节点 = NameRegex, FilterKey = "^(?=.*(熊啾啾)).*$"
+回家节点 = NameRegex, FilterKey = "Home"
 
 [Proxy Chain]
 
 # >本地分流规则
 [Rule]
+IP-CIDR,192.168.31.0/24,Home,no-resolve
 FINAL,漏网之鱼
 
 # >分流规则 远程订阅
 [Remote Rule]
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/OpenAI/OpenAI.list, policy=OpenAi, tag=OpenAI, enabled=true
+https://kelee.one/Tool/Loon/Rule/AI.list, policy=OpenAi, tag=OpenAI, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=PayPal, enabled=true
 https://raw.githubusercontent.com/yishangfei/run/main/Loon/Personal.list, policy=节点选择, tag=Personal, enabled=true
@@ -114,12 +118,11 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GitHub/GitHub.list, policy=节点选择, tag=GitHub, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Developer/Developer.list, policy=节点选择, tag=Developer, enabled=true
 
-https://kelee.one/Tool/Loon/Rule/AppleID.list, policy=Apple, tag=AppleID, enabled=true
-https://kelee.one/Tool/Loon/Rule/ApplePushNotificationService.list, policy=Apple, tag=ApplePushNotificationService, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=AppleID, enabled=true
+https://kelee.one/Tool/Loon/Rule/ApplePushNotificationService.list, policy=Apple, tag=ApplePushNotificationService, enabled=true
 
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=WeChat, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/UnionPay/UnionPay.list, policy=DIRECT, tag=UnionPay, enabled=true
 
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Direct/Direct.list, policy=DIRECT, tag=Direct, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=ChinaMax, enabled=true
@@ -156,10 +159,9 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/config/Loon.plugin, policy=自动选择, tag=Sub-Store, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Node_detection_tool.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/TestFlightRegionUnlock.plugin, tag=TestFlight解锁, enabled=true
-https://kelee.one/Tool/Loon/Plugin/QuickSearch.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/QuickSearch.plugin, enabled=false
 https://whatshub.top/plugin/bili.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Bilibili_remove_ads.plugin, enabled=true
-https://github.com/BiliUniverse/Redirect/releases/latest/download/BiliBili.Redirect.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/TikTok_redirect.plugin, policy=TikTok, enabled=true
 https://kelee.one/Tool/Loon/Plugin/YouTube_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Weibo_remove_ads.plugin, enabled=true
@@ -171,6 +173,7 @@ https://kelee.one/Tool/Loon/Plugin/NeteaseCloudMusic_remove_ads.plugin, enabled=
 https://kelee.one/Tool/Loon/Plugin/Taobao_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/JD_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/smzdm_remove_ads.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/LuckinCoffee_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/BaiduNetDisk_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/12306_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Bank_remove_ads.plugin, enabled=true
