--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -13,7 +13,7 @@ ipasn-url = https://raw.githubusercontent.com/P3TERX/GeoLite.mmdb/download/GeoLi
 # IPv6 支持
 ipv6 = true
 # > 跳过某个域名或者IP段
-skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com
+skip-proxy = 10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # DNS 服务器
 dns-server = 223.5.5.5,119.29.29.29
@@ -56,9 +56,8 @@ TikTok = select,节点选择,新国时延优选,台湾时延优选,img-url = htt
 漏网之鱼 = select,节点选择,DIRECT,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png
 
 # --------------------------------
-# 回家
-Home = url-test,回家节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/China.png
 # 自动
+回家之路 = url-test,回家节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/China.png
 # 时延优选
 香港时延优选 = url-test,香港节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 台湾时延优选 = url-test,台湾节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
@@ -86,6 +85,7 @@ Home = url-test,回家节点,interval = 60,tolerance = 50,img-url = https://raw.
 
 # >筛选订阅节点
 [Remote Filter]
+回家节点 = NameRegex, FilterKey = "Home"
 全球节点 = NameRegex, FilterKey = "^(?=.*(.))(?!.*((?i)群|邀请|返利|循环|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|过期|已用|联系|邮箱|工单|贩卖|通知|倒卖|防止|国内|地址|频道|无法|说明|使用|提示|特别|访问|支持|教程|关注|更新|作者|加入|(\b(USE|USED|TOTAL|EXPIRE|EMAIL|Panel|Channel|Author)\b|(\d{4}-\d{2}-\d{2}|\d+G)))).*$"
 香港节点 = NameRegex, FilterKey = "^(?=.*(香港|HK|Hong|🇭🇰))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
 台湾节点 = NameRegex, FilterKey = "^(?=.*(台湾|TW|Taiwan|🇹🇼|🇨🇳))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
@@ -94,13 +94,12 @@ Home = url-test,回家节点,interval = 60,tolerance = 50,img-url = https://raw.
 新国节点 = NameRegex, FilterKey = "^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
 美国节点 = NameRegex, FilterKey = "^(?=.*(美国|US|United States|America|🇺🇸))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
 其他节点 = NameRegex, FilterKey = "^(?!.*(🇭🇰|HK|Hong|香港|🇹🇼|🇨🇳|TW|Taiwan|台湾|🇯🇵|JP|Japan|日本|🇸🇬|SG|Singapore|狮城|新加坡|🇺🇸|US|United States|America|美国|🇰🇷|KR|Korea|韩国|韓|网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
-回家节点 = NameRegex, FilterKey = "Home"
 
 [Proxy Chain]
 
 # >本地分流规则
 [Rule]
-IP-CIDR,192.168.31.0/24,Home,no-resolve
+IP-CIDR,192.168.31.0/24,回家之路,no-resolve
 FINAL,漏网之鱼
 
 # >分流规则 远程订阅
