--- a/Clash.yaml
+++ b/Clash.yaml
@@ -278,6 +278,7 @@ rule-providers:
 
 # 规则指向
 rules:
+  - IP-CIDR,192.168.31.0/24,回家之路
   - RULE-SET, Lan, DIRECT
   - RULE-SET, Direct, DIRECT
   - RULE-SET, AI, ChatGPT
