--- a/Clash.yaml
+++ b/Clash.yaml
@@ -99,10 +99,10 @@ NodeParam: &NodeParam {type: http, interval: 3600, health-check: {enable: true, 
 
 # 锚点 - 节点订阅
 proxy-providers: 
-  机场名称1:
+  Ladder:
     url: '机场1的订阅URL'
     <<: *NodeParam
-    path: './proxy_providers/机场名称1.yaml'
+    path: './proxy_providers/Ladder.yaml'
 
 # 锚点 - 节点筛选组
 FilterHome: &FilterHome '^(?=.*(Home))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$'
