--- a/Clash.yaml
+++ b/Clash.yaml
@@ -33,20 +33,16 @@ geox-url:
   mmdb: 'https://gitlab.com/Masaiki/GeoIP2-CN/-/raw/release/Country.mmdb'
   asn: 'https://gitlab.com/Loon0x00/loon_data/-/raw/main/geo/GeoLite2-ASN.mmdb'
   
-# hosts:
-#   'mtalk.google.com': 108.177.125.188
-#   'alt1-mtalk.google.com': 3.3.3.3
-#   'alt2-mtalk.google.com': 3.3.3.3
-#   'alt3-mtalk.google.com': 74.125.200.188
-#   'alt4-mtalk.google.com': 74.125.200.188
-#   'alt5-mtalk.google.com': 3.3.3.3
-#   'alt6-mtalk.google.com': 3.3.3.3
-#   'alt7-mtalk.google.com': 74.125.200.188
-#   'alt8-mtalk.google.com': 3.3.3.3
-#   'mtalk.google.com': 2404:6800:4008:c07::bc
-#   'alt1-mtalk.google.com': 2607:f8b0:4023:c0b::bc
-#   'alt5-mtalk.google.com': 2607:f8b0:4023:1::bc
-#   'alt7-mtalk.google.com': 2607:f8b0:4002:c03::bc
+hosts:
+  'mtalk.google.com': 108.177.125.188
+  'alt1-mtalk.google.com': 3.3.3.3
+  'alt2-mtalk.google.com': 3.3.3.3
+  'alt3-mtalk.google.com': 74.125.200.188
+  'alt4-mtalk.google.com': 74.125.200.188
+  'alt5-mtalk.google.com': 3.3.3.3
+  'alt6-mtalk.google.com': 3.3.3.3
+  'alt7-mtalk.google.com': 74.125.200.188
+  'alt8-mtalk.google.com': 3.3.3.3
   
 profile:
   store-selected: true
