--- a/Clash.yaml
+++ b/Clash.yaml
@@ -241,6 +241,11 @@ rule-providers:
     path: './rules/GlobalMedia.yaml'
     url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.yaml'
 
+  Wikipedia:
+    <<: *RuleProviders
+    path: './rules/Wikipedia.yaml'
+    url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Wikipedia/Wikipedia.yaml'
+
   Proxy:
     <<: *RuleProviders
     path: './rules/Proxy.yaml'
@@ -301,6 +306,7 @@ rules:
   - RULE-SET, Developer, 节点选择
   - RULE-SET, Global, 节点选择
   - RULE-SET, GlobalMedia, 节点选择
+  - RULE-SET, Wikipedia, 节点选择
   - RULE-SET, Proxy, 节点选择
   - RULE-SET, Google, 节点选择
   - RULE-SET, WeChat, DIRECT
