--- a/Clash.yaml
+++ b/Clash.yaml
@@ -190,7 +190,7 @@ rule-providers:
   Telegram:
     <<: *RuleProviders
     path: './rules/Telegram.yaml'
-    url: 'https://kelee.one/Tool/Clash/Rule/Telegram.yaml'
+    url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml'
 
   Twitter:
     <<: *RuleProviders
