--- a/Clash.yaml
+++ b/Clash.yaml
@@ -127,6 +127,7 @@ proxy-groups:
   - {name: 节点选择, type: select, proxies: [自动选择, 香港时延优选, 新国时延优选], icon:  https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png}
   - {name: ChatGPT, type: select, proxies: [新国时延优选,美国时延优选,节点选择], icon:  https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/ChatGPT-green.png}
   - {name: Telegram, type: select, proxies: [节点选择, 新国时延优选, 美国时延优选], icon:  https://raw.githubusercontent.com/Orz-3/mini/master/Color/Telegram.png}
+  - {name: Apple, type: select, proxies: [DIRECT, 节点选择, 美国时延优选], icon:  https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png}
   - {name: Microsoft, type: select, proxies: [DIRECT, 节点选择], icon:  https://raw.githubusercontent.com/Orz-3/mini/master/Color/Microsoft.png}
   - {name: 回家之路, type: url-test, include-all: true, filter: *FilterHome, icon:  https://raw.githubusercontent.com/Orz-3/mini/master/Color/China.png}
   - {name: 漏网之鱼, type: select, proxies: [节点选择, DIRECT], icon:  https://raw.githubusercontent.com/Orz-3/mini/master/Color/Final.png}
@@ -177,6 +178,21 @@ rule-providers:
     path: './rules/AI.yaml'
     url: 'https://kelee.one/Tool/Clash/Rule/AI.yaml'
 
+  Apple:
+    <<: *RuleProviders
+    path: './rules/AppleMusic.yaml'
+    url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml'
+    
+  AppStore:
+    <<: *RuleProviders
+    path: './rules/AppleMusic.yaml'
+    url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppStore/AppStore.yaml'    
+    
+  AppleMusic:
+    <<: *RuleProviders
+    path: './rules/AppleMusic.yaml'
+    url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleMusic/AppleMusic.yaml'
+    
   Microsoft:
     <<: *RuleProviders
     path: './rules/Microsoft.yaml'
@@ -283,6 +299,9 @@ rules:
   - RULE-SET, Lan, DIRECT
   - RULE-SET, Direct, DIRECT
   - RULE-SET, AI, ChatGPT
+  - RULE-SET, Apple, Apple
+  - RULE-SET, Apple, AppStore
+  - RULE-SET, Apple, AppleMusic
   - RULE-SET, Microsoft, Microsoft
   - RULE-SET, Telegram, Telegram
   - RULE-SET, Personal, 节点选择
