--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -108,6 +108,7 @@ https://kelee.one/Tool/Loon/Rule/AI.list, policy=OpenAi, tag=OpenAI, enabled=tru
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=PayPal, enabled=true
 https://raw.githubusercontent.com/yishangfei/run/main/Loon/Personal.list, policy=节点选择, tag=Personal, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Duolingo/Duolingo.list, policy=节点选择, tag=Duolingo, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Google/Google.list, policy=节点选择, tag=Google, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list, policy=节点选择, tag=YouTube, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global.list, policy=节点选择, tag=Global, enabled=true
