--- a/Loon_diy.conf
+++ b/Loon_diy.conf
@@ -47,7 +47,7 @@ Ladder = https://baidu.com,udp=false,fast-open=false,vmess-aead=true,skip-cert-v
 # >策略组
 [Proxy Group]
 自动选择 = url-test,全球节点,interval = 600,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Auto.png
-节点选择 = select,自动选择,香港时延优选,香港故障转移,新国时延优选,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
+节点选择 = select,自动选择,香港时延优选,香港故障转移,新国时延优选,其他时延优选,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Bypass.png
 Telegram = select,节点选择,新国时延优选,美国时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Telegram.png
 OpenAi = select,节点选择,新国时延优选,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/OpenAI.png
 Apple = select,DIRECT,节点选择,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Apple.png
@@ -65,6 +65,7 @@ TikTok = select,节点选择,新国时延优选,台湾时延优选,img-url = htt
 韩国时延优选 = url-test,韩国节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
 新国时延优选 = url-test,新国节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 美国时延优选 = url-test,美国节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+其他时延优选 = url-test,其他节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/XD.png
 # --------------------------------
 # 故障转移
 香港故障转移 = fallback,香港节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
@@ -86,13 +87,13 @@ TikTok = select,节点选择,新国时延优选,台湾时延优选,img-url = htt
 # >筛选订阅节点
 [Remote Filter]
 回家节点 = NameRegex, FilterKey = "Home"
-全球节点 = NameRegex, FilterKey = "^(?=.*(.))(?!.*((?i)群|邀请|返利|循环|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|过期|已用|联系|邮箱|工单|贩卖|通知|倒卖|防止|国内|地址|频道|无法|说明|使用|提示|特别|访问|支持|教程|关注|更新|作者|加入|(\b(USE|USED|TOTAL|EXPIRE|EMAIL|Panel|Channel|Author)\b|(\d{4}-\d{2}-\d{2}|\d+G)))).*$"
-香港节点 = NameRegex, FilterKey = "^(?=.*(香港|HK|Hong|🇭🇰))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
-台湾节点 = NameRegex, FilterKey = "^(?=.*(台湾|TW|Taiwan|🇹🇼|🇨🇳))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
-日本节点 = NameRegex, FilterKey = "^(?=.*(日本|JP|Japan|🇯🇵))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
-韩国节点 = NameRegex, FilterKey = "^(?=.*(韩国|韓|KR|Korea|🇰🇷))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
-新国节点 = NameRegex, FilterKey = "^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
-美国节点 = NameRegex, FilterKey = "^(?=.*(美国|US|United States|America|🇺🇸))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
+全球节点 = NameRegex, FilterKey = "^(?=.*(.))(?!.*((?i)群|邀请|返利|循环|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|过期|已用|联系|邮箱|工单|贩卖|通知|倒卖|防止|国内|地址|频道|无法|说明|使用|提示|特别|访问|支持|教程|关注|更新|作者|加入|魔戒|(\b(USE|USED|TOTAL|EXPIRE|EMAIL|Panel|Channel|Author)\b|(\d{4}-\d{2}-\d{2}|\d+G)))).*$"
+香港节点 = NameRegex, FilterKey = "^(?=.*(香港|HK|Hong|🇭🇰))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量|魔戒)).*$"
+台湾节点 = NameRegex, FilterKey = "^(?=.*(台湾|TW|Taiwan|🇹🇼|🇨🇳))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量|魔戒)).*$"
+日本节点 = NameRegex, FilterKey = "^(?=.*(日本|JP|Japan|🇯🇵))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量|魔戒)).*$"
+韩国节点 = NameRegex, FilterKey = "^(?=.*(韩国|韓|KR|Korea|🇰🇷))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量|魔戒)).*$"
+新国节点 = NameRegex, FilterKey = "^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量|魔戒)).*$"
+美国节点 = NameRegex, FilterKey = "^(?=.*(美国|US|United States|America|🇺🇸))^(?!.*(网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量|魔戒)).*$"
 其他节点 = NameRegex, FilterKey = "^(?!.*(🇭🇰|HK|Hong|香港|🇹🇼|🇨🇳|TW|Taiwan|台湾|🇯🇵|JP|Japan|日本|🇸🇬|SG|Singapore|狮城|新加坡|🇺🇸|US|United States|America|美国|🇰🇷|KR|Korea|韩国|韓|网站|地址|剩余|过期|时间|有效|网址|禁止|邮箱|发布|客服|订阅|节点|流量)).*$"
 
 [Proxy Chain]
