--- a/Clash/Personal.yaml
+++ b/Clash/Personal.yaml
@@ -11,3 +11,5 @@ payload:
   - DOMAIN-SUFFIX,themoviedb.org
   - DOMAIN-SUFFIX,infuse.im
   - DOMAIN-SUFFIX,trakt.tv
+  - DOMAIN-SUFFIX,ibkr.com
+  - DOMAIN-SUFFIX,interactivebrokers.com
