--- a/Clash.yaml
+++ b/Clash.yaml
@@ -261,6 +261,11 @@ rule-providers:
     <<: *RuleProviders
     path: './rules/ChinaDownloadCDN.yaml'
     url: 'https://kelee.one/Tool/Clash/Rule/ChinaDownloadCDN.yaml'
+
+  XiaoHongShu:
+    <<: *RuleProviders
+    path: './rules/XiaoHongShu.yaml'
+    url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiaoHongShu/XiaoHongShu.yaml'
     
   WeChat:
     <<: *RuleProviders
@@ -304,6 +309,7 @@ rules:
   - RULE-SET, Lan, DIRECT
   - RULE-SET, Direct, DIRECT
   - RULE-SET, WeChat, DIRECT
+  - RULE-SET, XiaoHongShu, XJJ
   - RULE-SET, ChinaMax, DIRECT
   - RULE-SET, ChinaMax_IP, DIRECT
   - RULE-SET, ChinaMedia, DIRECT
@@ -329,6 +335,7 @@ rules:
   - RULE-SET, Privacy, REJECT
   - GEOIP, CN, DIRECT
   - MATCH, 漏网之鱼
+
 
 
 
