--- a/Clash.yaml
+++ b/Clash.yaml
@@ -262,6 +262,11 @@ rule-providers:
     path: './rules/ChinaDownloadCDN.yaml'
     url: 'https://kelee.one/Tool/Clash/Rule/ChinaDownloadCDN.yaml'
 
+  Kingsoft:
+    <<: *RuleProviders
+    path: './rules/Kingsoft.yaml'
+    url: 'https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Kingsoft/Kingsoft.yaml'
+    
   XiaoHongShu:
     <<: *RuleProviders
     path: './rules/XiaoHongShu.yaml'
@@ -310,6 +315,7 @@ rules:
   - RULE-SET, Direct, DIRECT
   - RULE-SET, WeChat, DIRECT
   - RULE-SET, XiaoHongShu, XJJ
+  - RULE-SET, Kingsoft, DIRECT
   - RULE-SET, ChinaMax, DIRECT
   - RULE-SET, ChinaMax_IP, DIRECT
   - RULE-SET, ChinaMedia, DIRECT
@@ -335,6 +341,7 @@ rules:
   - RULE-SET, Privacy, REJECT
   - GEOIP, CN, DIRECT
   - MATCH, 漏网之鱼
+
 
 
 
