--- a/Clash/Personal.yaml
+++ b/Clash/Personal.yaml
@@ -13,3 +13,4 @@ payload:
   - DOMAIN-SUFFIX,trakt.tv
   - DOMAIN-SUFFIX,ibkr.com
   - DOMAIN-SUFFIX,interactivebrokers.com
+  - DOMAIN-SUFFIX,imgur.com
